<resources>
    <string name="app_name">MeetingPlanner</string>

    <!--Склонение времен-->
    <string-array name="TimeToWorD">
        <item> час </item>
        <item> часов </item>
        <item> часа </item>
        <item> минут </item>
    </string-array>


    <!--Имена-->
    <string-array name="Name">
        <item>Ульяна Кравец</item>
        <item>Назар Рубан</item>
        <item>Даниил Кравченко</item>
        <item>Орыся Коваль</item>
        <item>Тамила Гончаренко</item>
        <item>Кирилл Матвиенко</item>
        <item>Анжелика Пилипенко</item>
        <item>Владислав Филипенко</item>
        <item>Олесь Бондаренко</item>
        <item>Максим Краско</item>
        <item>Снежана Дзюба</item>
    </string-array>

    <!--Тип события-->
    <string-array name="MeetingType">
        <item>Деловая встреча</item>
        <item>Поход в кино</item>
        <item>Поход в паб</item>
        <item>Поездка на рыбалку</item>
        <item>Поход в боулинг</item>
    </string-array>

    <!--Место события-->
    <string-array name="MeetingPlace">
        <item>Ресторан Эгоист</item>
        <item>Кинотератр Кронверк</item>
        <item>Ирландский Паб</item>
        <item>Ставки</item>
        <item>РЦ Ультрамарин</item>
    </string-array>

    <!--Месяцы-->
    <string-array name="Month_RUS">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <!--Месяцы в родительном-->
    <string-array name="Month_RUS_R">
        <item>Января</item>
        <item>Февраля</item>
        <item>Марта</item>
        <item>Апреля</item>
        <item>Мая</item>
        <item>Июня</item>
        <item>Июля</item>
        <item>Августа</item>
        <item>Сентября</item>
        <item>Октября</item>
        <item>Ноября</item>
        <item>Декабря</item>
    </string-array>

    <!--Служебные надписи (заголовки диалогов, подписи к полям и т.п.)-->
    <string name="l_ChoiceDate">Выбор даты:</string>
    <string name="l_Date">Дата:</string>
    <string name="l_AddPost">Новое событие</string>
    <string name="l_Meeting">Событие</string>
    <string name="l_Time">Время</string>
    <string name="l_Place">Место</string>
    <string name="l_MeetingType">Тип</string>
    <string name="l_TimeFrom">От</string>
    <string name="l_TimeTo">До</string>
    <string name="l_Application">Приложение</string>
    <string name="l_Calendar">КАЛЕНДАРЬ</string>
    <string name="Meeting_duration_alarm">Минимальная протяженность встречи - 30 минут"</string>

    <!--Надписи к кнопкам-->
    <string name="b_OK">ОК</string>
    <string name="b_ViewPost">Открыть записи</string>
    <string name="b_Refresh">Обновить</string>
    <string name="b_Add">Добавить</string>
    <string name="b_Delete">Удалить</string>
    <string name="b_Cancel">Отмена</string>
    <string name="b_Back">Назад</string>
    <string name="b_Save">Сохранить</string>


    <string name="action_settings">Settings</string>
    <string name="ico_calendar">Иконка приложения КАЛЕНДАРЬ</string>
    <string name="title_activity_date_info">title_activity_date_info</string>
    <string name="title_activity_meeting_add">title_activity_meeting_add</string>
</resources>
