<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#56ffff32">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:id="@+id/linearLayout"
        android:background="#d4d4a040">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/ivIco_calendar"
            android:src="@drawable/ico_calendar2"
            android:layout_weight="3"
            android:contentDescription="@string/ico_calendar"
            android:layout_marginLeft="8dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/l_Application"
                android:id="@+id/tvApplicationL"
                android:textColor="#ff2020ff"
                android:textSize="24sp"
                android:textStyle="italic"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/l_Calendar"
                android:id="@+id/tvCalendarL"
                android:textColor="#ff2020ff"
                android:textSize="24sp"
                android:textStyle="italic"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_ChoiceDate"
        android:id="@+id/tvChoiceDateL"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textStyle="italic"
        android:textSize="24dp"
        android:textColor="#ff2020ff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_ViewPost"
        android:id="@+id/bViewPost"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:background="#d4d4a040"
        android:textColor="#ff2020ff" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sDay"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sMonth"
        android:layout_below="@+id/sDay"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:textAlignment="center" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sYear"
        android:layout_below="@+id/sMonth"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp" />

</RelativeLayout>
