<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llDateInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#56ffff32">

    <TableRow
        android:id="@+id/trTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="4"
        android:background="#d4d4a040">

        <TextView
            android:id="@+id/tvDateLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="Дата:"
            android:textColor="#ff2020ff"
            android:textIsSelectable="false"
            android:textSize="24dp"
            android:textStyle="italic"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:id="@+id/tvSelectedDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:text="21 февраля 2015"
            android:textColor="#ff2020ff"
            android:textSize="22dp"
            android:textStyle="italic"
            android:gravity="center_vertical|center_horizontal" />

    </TableRow>

    <ListView
        android:id="@+id/lvDateInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
    </ListView>


    <TableRow
        android:id="@+id/trBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:baselineAligned="false">

        <Button
            android:id="@+id/bBackDateInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b_Back"
            android:textSize="16dp"
            android:textColor="#ff2020ff"
            android:background="#d4d4a040" />

        <Button
            android:id="@+id/bRefreshDateInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b_Refresh"
            android:textSize="16dp"
            android:textColor="#ff2020ff"
            android:background="#d4d4a040" />

        <Button
            android:id="@+id/bAddDateInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b_Add"
            android:textSize="16dp"
            android:textColor="#ff2020ff"
            android:background="#d4d4a040"
            android:clickable="false" />
    </TableRow>

</LinearLayout>